[tool.poetry]
name = "repl_python3_comp100-2021f-ps0-KEMALOGUZ"
version = "0.1.0"
description = ""
authors = ["KEMALOGUZ2 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
id = "^0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
